# stavka

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  stavka.code-workspace  tsconfig.json
.agents/skills/add-test/: SKILL.md
.agents/skills/ai-docs-lookup/: README.md
.agents/skills/arma-reforger/: SKILL.md
.agents/skills/arma-reforger-server-config/: SKILL.md  reference.md
.agents/skills/arma-reforger-server-hosting/: SKILL.md  reference.md
.agents/skills/commit-message/: README.md
.agents/skills/post-task-review/: README.md
.agents/skills/spec-driven-dev/: README.md  SKILL.md
.agents/skills/task-learnings/: README.md  SKILL.md
.ai/: learnings.md
.ai/templates/: design.md  requirements.md  tasks.md
.claude/skills/add-test/: SKILL.md
.claude/skills/ai-docs-lookup/: SKILL.md
.claude/skills/arma-reforger/: SKILL.md
.claude/skills/plan-critic/: README.md  (+1 more)
.cursor/: rules.md
.cursor/rules/: learnings.md  plan-critic.mdc  post-task-review.md  spec-driven-dev.md
.specs/tailscale-integration/: spec.md
.zed/: settings.json
crates/arma-test-server/: Cargo.toml  README.md
crates/arma-test-server/src/: main.rs  settings.rs
crates/arma-test-server/src/commands/: mod.rs  saves.rs  setup.rs  start.rs  tailscale.rs  tailscale_runtime.rs
crates/tailscale-integration/: Cargo.toml
crates/tailscale-integration/src/: acl.rs  client.rs  config.rs  integration.rs  invite.rs  ip.rs  lib.rs
mods/AttackDefendTest/: addon.gproj
mods/RestTest/: addon.gproj
mods/SpawnTest/: addon.gproj
mods/StavkaTest/: addon.gproj  test-round-trip.js  test-server.js
mods/TerrainBenchmark/: addon.gproj
test-server/: .config-patched.json  README.md  config.json  package.json  saves.ts  settings.example.json  settings.ts  setup.ts  start.ts
(+41 files in other folders)
