[package]
name = "arma-test-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Arma Reforger dedicated server management tool"

[[bin]]
name = "arma-test-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
dirs = "6"
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
tempfile = "3"
walkdir = "2"
chrono = "0.4"

[build-dependencies]
serde_json = "1"
