[package]
name = "tailscale-integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tailscale networking integration for Arma Reforger server management"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
dirs = "6"
chrono = "0.4"
url = "2"
urlencoding = "2"
